crates/toon-schema/tests/compile_fail/empty_struct.rs
use serde::{Deserialize, Serialize};
use toon_schema::ToonSchema;

#[derive(ToonSchema, Serialize, Deserialize)]
#[toon_schema(description = "Empty struct test")]
struct EmptyStruct {}

fn main() {}
