crates/toon-schema/tests/compile_fail/empty_struct.stderr
error: ToonSchema cannot be derived for empty structs
 --> tests/compile_fail/empty_struct.rs:5:1
  |
5 | struct EmptyStruct {}
  | ^^^^^^^^^^^^^^^^^^^